# tft-pricing-oracle

./: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml  readme.md
chart/pricing-oracle/: Chart.yaml  values.yaml
chart/pricing-oracle/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
src/: main.rs
